<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bck"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:background="@drawable/topbar"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="left"
            android:layout_marginLeft="10dip"
            android:background="@null"
            android:src="@drawable/back" />

        <ImageButton
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="left"
            android:layout_marginLeft="10dip"
            android:background="@null"
            android:src="@drawable/home" />

        <ImageButton
            android:id="@+id/btnSettings"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:layout_marginLeft="245dip"
            android:background="@null"
            android:src="@drawable/settings" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dip"
            android:src="@drawable/starttest" />

        <ImageButton
            android:id="@+id/btnPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dip"
            android:background="@null"
            android:src="@drawable/play" />

        <ImageButton
            android:id="@+id/btnStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@null"
            android:src="@drawable/stop" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutECG"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:layout_weight="0.18"
        android:background="@drawable/ecgchart"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:text="Chronometer"
            android:textSize="30px"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout2"
        layout_width="fill_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TableLayout
            android:id="@+id/TableLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/vitalchart" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/label1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dip"
                    android:layout_marginTop="33dp"
                    android:text="@string/heart_rate"
                    android:textColor="@color/black"
                    android:textSize="18px" />
                
                <TextView
                    android:id="@+id/lblHeartRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="33dp"
                    android:text="@string/zero"
                    android:textColor="@color/black"
                    android:textSize="18px" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/label2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dip"
                    android:paddingTop="4dip"
                    android:text="@string/ecg"
                    android:textColor="@color/black"
                    android:textSize="18px" />
                
                <TextView
                    android:id="@+id/lblECG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:paddingTop="4dip"
                    android:text="@string/zero"
                    android:textColor="@color/black"
                    android:textSize="18px" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/label3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dip"
                    android:paddingTop="4dip"
                    android:text="@string/skin_temperature"
                    android:textColor="@color/black"
                    android:textSize="18px" />
                
                <TextView
                    android:id="@+id/lblSkin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:paddingTop="4dip"
                    android:text="@string/zero"
                    android:textColor="@color/black"
                    android:textSize="18px" />

            </TableRow>

        </TableLayout>

        <LinearLayout
            android:id="@+id/LayoutACC"
            android:layout_width="wrap_content"
            android:layout_height="163px"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/accchart"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/lblBlank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="40dip"
                android:paddingTop="4dip"
                android:text="@string/empty"
                android:textColor="@color/black"
                android:textSize="25px" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/btnDuringExcercise"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:background="@null"
        android:src="@drawable/duringexcercise" />

    <ImageButton
        android:id="@+id/btnPostExcercise"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/postexcercise" />

</LinearLayout>
